added a description and tent photo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 </head>
 <body>
  <div id="header">
-  <h1>Discover hidden places in the world around you</h1>
-
-<p><a href="https://7bisv3dko897qnh7lkbjr6d994os4qmp3joharqpujovtgua5ko0.cc-propeller.cloud/#" target="_blank">Download Excursion (Coming soon!)</a></p> 
+  <p class="Discover">Discover hidden places in the world around you</p>
+  <p class="Download"><a href="https://7bisv3dko897qnh7lkbjr6d994os4qmp3joharqpujovtgua5ko0.cc-propeller.cloud/#" target="_blank">Download Excursion (Coming soon!)</a></p>
  </div>
+
+  <video autoplay>
+   <source src="resources/videos/excursion.mp4" type="video/mp4">
+  </video>
+
+</br>
+
+  <p class=personal>Your personal travel guide</p>
+  <p class=description>Excursion remebers places you like, and recommends new points of interest to you.</p>
+
+  <img src="resources/images/camp.jpg"/>
+
+
 
 
 </body>
