added further content, tweaked link color

--- a/index.html
+++ b/index.html
@@ -7,21 +7,45 @@
 <body>
  <div id="header">
   <p class="Discover">Discover hidden places in the world around you</p>
-  <p class="Download"><a href="https://7bisv3dko897qnh7lkbjr6d994os4qmp3joharqpujovtgua5ko0.cc-propeller.cloud/#" target="_blank">Download Excursion (Coming soon!)</a></p>
+   </br>
+  <p class="download"><a href="https://7bisv3dko897qnh7lkbjr6d994os4qmp3joharqpujovtgua5ko0.cc-propeller.cloud/#" target="_blank">Download Excursion (Coming soon!)</a></p>
  </div>
 
+ <div id="video and description">
   <video autoplay>
    <source src="resources/videos/excursion.mp4" type="video/mp4">
   </video>
+       </br>
+  <p class="personal_coming_soon">Your personal travel guide</p>
 
-</br>
+        </br>
 
-  <p class=personal>Your personal travel guide</p>
   <p class=description>Excursion remebers places you like, and recommends new points of interest to you.</p>
+</div>
 
-  <img src="resources/images/camp.jpg"/>
+<div id="tent photo and footer">
+  <p>
+    <img src="resources/images/camp.jpg"/>
+  </p>
+
+  <p>
+    <img src="resources/images/phone.jpg"/>
+  </p> <!-- as instructed, added p elemnt to stop photos from clumping -->
+
+   <p class="personal_coming_soon">Coming Soon for iPhone and Android </p>
+   <p class="download">
+     <a href="https://7bisv3dko897qnh7lkbjr6d994os4qmp3joharqpujovtgua5ko0.cc-propeller.cloud/#" target="_blank">Download Excursion (Coming soon!)</a>
+   </p>
+
+   <p class="copywrite"> © Excursion</p>
+
+
+
+
+
 
 
 
 
 </body>
+</html>
